# ros2_humanoid

./: .gitignore  README.md  walkthrough.md
docs/: architecture.md  setup_guide.md
src/humanoid_bringup/: package.xml  setup.cfg  setup.py
src/humanoid_bringup/config/: pick_place_params.yaml
src/humanoid_bringup/humanoid_bringup/: pick_place_node.py
src/humanoid_bringup/launch/: pick_place_demo.launch.py
src/humanoid_description/: CMakeLists.txt  package.xml
src/humanoid_description/config/: joint_limits.yaml
src/humanoid_description/launch/: display.launch.py
src/humanoid_description/meshes/: README.md
src/humanoid_description/rviz/: robot.rviz
src/humanoid_description/urdf/: arm.xacro  camera.xacro  gripper.xacro  humanoid.urdf.xacro  ros2_control.xacro
src/humanoid_gazebo/: CMakeLists.txt  package.xml
src/humanoid_gazebo/config/: controllers.yaml
src/humanoid_gazebo/launch/: simulation.launch.py
src/humanoid_gazebo/models/: README.md
src/humanoid_gazebo/worlds/: pick_place.world
src/humanoid_moveit_config/: CMakeLists.txt  package.xml
src/humanoid_moveit_config/config/: humanoid.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/humanoid_moveit_config/launch/: moveit.launch.py  moveit_gazebo.launch.py
src/humanoid_perception/: package.xml  setup.cfg  setup.py
src/humanoid_perception/config/: detection_params.yaml
src/humanoid_perception/humanoid_perception/: object_detector.py
src/humanoid_perception/launch/: perception.launch.py
